--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <title>TDR Correction</title>
+    <title>Personal Profile</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -20,9 +20,8 @@
         <div id="header"></div><script id="header">$("div#header").html(__header_html);</script>
         <div class="content m-5">
             <!--Content START ============================================================ -->
-            <h2>TDR Correction by Machine Learning</h2>
+            <h2>Title</h2>
             <div class="content m-3">
-                <h4>The Problem</h4>
                 <p>This is content</p>
             </div>
             <!--Content END ============================================================== -->
