--- a/cal.html
+++ b/cal.html
@@ -9,6 +9,7 @@
     <script src="js/cal.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     
     <style>
         .fakeimg {
@@ -21,18 +22,21 @@
         <div id="header"></div><script id="header">$("div#header").html(__header_html);</script>
         <div class="content m-5">
             <!--Content START ============================================================ -->
+            <div id="alert"></div>
+
             <h1>Calculator</h1>
+            <p>The calculator corrects TDR measurements using a machine learning model that takes into account features such as cable loss and impedance. For more details, please refer to the <a href="index.html">link</a>.</p>
             <div class="content m-3">
                 <h3>Cable Characterization</h3>
                 <p>The cable was used to connect instrument and the probe.</p>
                 <div class="input-group">
                     <span class="input-group-text" style="width:300px;">Cable Loss at  1 GHz</span>
-                    <input class="form-control" type="number" value="0.225" id="t1ghz" onchange="do_cal()">
+                    <input class="form-control" type="number" value="0.860" id="t1ghz" onchange="do_cal()">
                     <span class="input-group-text" style="width:50px;">dB</span>
                 </div>
                 <div class="input-group">
                     <span class="input-group-text" style="width:300px;">Cable Loss at 20 GHz</span>
-                    <input class="form-control" type="number" value="1.046" id="t20ghz" onchange="do_cal()">
+                    <input class="form-control" type="number" value="4.138" id="t20ghz" onchange="do_cal()">
                     <span class="input-group-text" style="width:50px;">dB</span>
                 </div>
                 <div class="input-group">
@@ -48,12 +52,12 @@
                 <div class="input-group">
                     <span class="input-group-text" style="width:300px;">DUT Type</span>
                     <select class="form-select" id="dut_mode" onchange="do_cal()">
-                        <option>Single-End</option>
-                        <option>Differential</option>
+                        <option value="1">Differential</option>
+                        <option value="2">Single-End</option>
                     </select>
 
                     <span class="input-group-text" style="width:300px;">TDR Measurement</span>
-                    <input class="form-control" type="number" value="75" id="zm" onchange="do_cal()">
+                    <input class="form-control" type="number" value="60.7" id="zm" onchange="do_cal()">
                     <span class="input-group-text" style="width:50px;">Ω</span>
                 </div>
             </div>
@@ -62,16 +66,161 @@
                 <h3>Correction Result</h3>
                 <div class="input-group">
                     <span class="input-group-text" style="width:300px;">Correlated Impedance</span>
-                    <input class="form-control" type="number" value="75" disabled>
+                    <input class="form-control" type="number" value="75" disabled id="corrected_z">
                     <span class="input-group-text" style="width:50px;">Ω</span>
+                </div>
+            </div>
+
+            <div class="content m-3 row">
+                <div class="col-sm-6">
+                    <div id="cable_plot" style="width:100%;max-width: 800px;"></div>
+                </div>
+                <div class="col-sm-6">
+                    <div id="z_plot" style="width:100%;max-width: 800px;"></div>
                 </div>
             </div>
             <!--Content END ============================================================== -->
         </div>
     </body>
     <script>
-        var do_cal = function(){
-            alert("done");
+        var show_alert = function(msg){
+            $("div#alert").html(`
+            <div class="alert alert-warning alert-dismissible fade show" role="alert" id="alert_msg">
+                <strong>Warning!</strong> ${msg}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>`);
+        }
+    </script>
+    <script>
+        var get_input = function(){
+            // get value
+            let t1ghz = parseFloat($('input#t1ghz').val());
+            let t20ghz = parseFloat($('input#t20ghz').val());
+            let z0 = parseFloat($('input#z0').val());
+            let dut_mode = parseFloat($('select#dut_mode').val());
+            let tdr_z = parseFloat($('input#zm').val());
+
+            // check validation
+            if(isNaN(t1ghz)){
+                show_alert('Insertion Loss at 1GHz should be a number.');
+                return;
+            }
+            if(isNaN(t20ghz)){
+                show_alert('Insertion Loss at 20GHz should be a number.');
+                return;
+            }
+            if(isNaN(z0)||(z0>53)||(z0<47)){
+                show_alert('Characterization impedance of the cable should be a number in between 47 to 53 Ω.');
+                return;
+            }
+            if(t1ghz<=0){
+                show_alert('Insertion Loss at 1GHz should be a positive non-zero number.');
+                return;
+            }
+            //if(((t1ghz/t20ghz)>0.3)||((t1ghz/t20ghz)<0.1)){
+            if(t1ghz>t20ghz){
+                show_alert('The cable is exhibiting abnormal behavior. Please replace it with a known good cable.');
+                return;
+            }
+            if(t20ghz>5){
+                show_alert('Insertion Loss of the cable is too high (>5dB @20GHz), please try to use a shorter cable.');
+                return;
+            }
+            if(isNaN(tdr_z)){
+                show_alert('TDR Measurement should be a number');
+                return;
+            }
+            if(tdr_z>(300/dut_mode)||tdr_z<(25/dut_mode)){
+                show_alert("The TDR measurement falls outside the regression model's valid range (25–300 Ω for differential, 12.5–150 Ω for single-ended)");
+                return;
+            }
+
+            // set output
+            return {
+                t1ghz: t1ghz,
+                t20ghz: t20ghz,
+                z0:z0,
+                dut_mode:dut_mode,
+                tdr_z:tdr_z
+            };
         };
+    </script>
+    <script>
+        var plot_cable_loss = function(){
+            let data = get_input();
+            if(data==undefined){
+                return;
+            }
+            plt_data = cable_s21(data.t1ghz,data.t20ghz);
+            let trace = [{
+                x: plt_data.x,
+                y: plt_data.y,
+                mode: 'lines',
+            }];
+            let layout = {
+                title: 'Characterization of Cable',
+                xaxis: { title: 'Frequency (GHz)' },
+                yaxis: { title: 'S21(dB)' }
+            };
+            Plotly.newPlot('cable_plot', trace, layout);
+            return true;
+        };
+
+        var plot_z = function(){
+            let data = get_input();
+            if(data==undefined){
+                return;
+            }
+
+            let trace_x = [];
+            let trace_y = [];
+            for(let i=25/data.dut_mode; i<300/data.dut_mode; i++){
+                trace_x.push(i);
+                trace_y.push(correct_z(i*data.dut_mode,data.t1ghz,data.t20ghz,data.z0)/data.dut_mode);
+            }
+            let trace = [
+                {
+                    x: [25/data.dut_mode,300/data.dut_mode],
+                    y: [25/data.dut_mode,300/data.dut_mode],
+                    mode: 'lines',
+                    name: 'Ideal',
+                    line:{color:'gray'}
+                },
+                {
+                    x: trace_x,
+                    y: trace_y,
+                    mode: 'lines',
+                    name: 'Prediction',
+                    line:{color:'blue'}
+                },
+                {
+                    x:[data.tdr_z],
+                    y:[correct_z(data.tdr_z*data.dut_mode,data.t1ghz,data.t20ghz,data.z0)/data.dut_mode],
+                    mode: 'markers',
+                    name: 'TDR Measurement',
+                    line:{color:'red',size:2}
+                }
+            ];
+
+            let layout = {
+                title: 'Correction Result',
+                xaxis: { title: 'TDR measurement(Ω)' },
+                yaxis: { title: 'Corrected Impedance(Ω)' }
+            };
+            Plotly.newPlot('z_plot', trace, layout);
+        }
+    </script>
+    <script>
+        var do_cal = function(){
+            let data = get_input();
+            if(data==undefined){
+                return;
+            }
+            if(plot_cable_loss()){
+                plot_z();
+            }
+            $("input#corrected_z").attr('value',correct_z(data.tdr_z*data.dut_mode,data.t1ghz,data.t20ghz,data.z0)/data.dut_mode)
+        };
+        do_cal();
     </script>
 </html>
