--- a/projects/tdr_cal/index.html
+++ b/projects/tdr_cal/index.html
@@ -11,7 +11,7 @@
 
     <script src="js/header_v1.js"></script>
     <script src="js/page_display_v1.js"></script>
-    <script src="js/pages/tdr_cal.js"></script>
+    <script src="tdr_cal.js"></script>
     
     <style>
         .fakeimg {
