--- a/projects/tdr_cal/index.html
+++ b/projects/tdr_cal/index.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-    <script src="js/header_v1.js"></script>
-    <script src="js/page_display_v1.js"></script>
+    <script src="../../js/header_v1.js"></script>
+    <script src="../../js/page_display_v1.js"></script>
     <script src="tdr_cal.js"></script>
     
     <style>
@@ -51,12 +51,12 @@
                 <div class="row">
                     <div class="col-sm-5 mb-5" id="fig1" style="max-height: 500px; object-fit: contain;">
                         <h5>Figure 1: An example of test setup.</h5>
-                        <img src="img/fig1.png" class="card-img-top" alt="...">
+                        <img src="fig1.png" class="card-img-top" alt="...">
                     </div>
                     <div class="col-sm-1"></div>
                     <div class="col-sm-5 mb-5" id="fig2" style="max-height: 500px; object-fit: contain;">
                         <h5>Figure 2: An example of measurement error.</h5>
-                        <img src="img/fig2.png" class="card-img-top" alt="...">
+                        <img src="fig2.png" class="card-img-top" alt="...">
                     </div>
                     <div class="col-sm-1"></div>
                 </div>
